# cmake-boilerplate

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  ct1_info.h.in  welcome.h
src/: CMakeLists.txt  main.c  welcome.c
tests/: CMakeLists.txt  ct1_test_welcome.c
